--- a/app/src/main/res/layout/activity_detail_barang.xml
+++ b/app/src/main/res/layout/activity_detail_barang.xml
@@ -19,7 +19,8 @@
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/_50sdp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -118,39 +119,126 @@
                         android:fontFamily="@font/quicksand_medium"
                         android:text="Informasi Penyedia Sewa:" />
 
-                    <TextView
-                        android:id="@+id/txt_nama_penyedia"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/quicksand_bold"
-                        android:text="Silvia"
-                        android:textColor="?colorPrimary"
-                        android:textSize="@dimen/_15sdp" />
+                        android:layout_marginTop="@dimen/_10sdp"
 
-                    <TextView
-                        android:id="@+id/txt_store"
+                        android:orientation="horizontal">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/imgStore"
+                            android:layout_width="@dimen/_50sdp"
+                            android:layout_height="@dimen/_50sdp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/website" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="@dimen/_20sdp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/txt_nama_penyedia"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/quicksand_bold"
+                                android:text="Nama Pemilik"
+                                android:textSize="@dimen/_20sdp"
+                                android:textColor="?colorPrimary" />
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginRight="@dimen/_5sdp"
+                                    android:src="@drawable/ic_baseline_storefront_24" />
+
+                                <TextView
+                                    android:id="@+id/txt_store"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/quicksand_medium"
+                                    android:layout_gravity="center"
+                                    android:text="Nama Toko" />
+                            </LinearLayout>
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/quicksand_medium"
-                        android:text="Sederhana" />
-                    <TextView
-                        android:id="@+id/txt_alamat_penyedia"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/place_24"
+                            app:tint="?colorPrimary" />
+
+
+                        <TextView
+                            android:id="@+id/txt_alamat_penyedia"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/_5sdp"
+                            android:fontFamily="@font/quicksand_bold"
+                            android:layout_gravity="center"
+                            android:text="Padang"/>
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/quicksand_medium"
-                        android:text="Padang" />
-                    <TextView
-                        android:id="@+id/txt_telp"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/phone_24"
+                            app:tint="?colorPrimary" />
+
+                        <TextView
+                            android:id="@+id/txt_telp"
+                            android:layout_gravity="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/_5sdp"
+                            android:fontFamily="@font/quicksand_bold"
+                            android:text="08129048"/>
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/quicksand_medium"
-                        android:text="08129048" />
-                    <TextView
-                        android:id="@+id/txt_WA"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/quicksand_medium"
-                        android:text="08129048" />
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/whatsapp_1"
+                            app:tint="?colorPrimary" />
+
+                        <TextView
+                            android:id="@+id/txt_WA"
+                            android:layout_gravity="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/_5sdp"
+                            android:fontFamily="@font/quicksand_bold"
+                            android:text="08129048" />
+                    </LinearLayout>
+
+
                 </LinearLayout>
 
 
