Tambah Package Notif,Edit FragmetHome,AdapterBooked dan ModelBooked

--- a/app/src/main/res/layout/item_row_booked.xml
+++ b/app/src/main/res/layout/item_row_booked.xml
@@ -81,6 +81,7 @@
                 android:paddingRight="@dimen/_10sdp"
                 android:paddingBottom="@dimen/_5sdp"
                 android:text="Statsdasus"
+                android:id="@+id/status"
                 android:textColor="@color/white" />
 
         </RelativeLayout>
